#1566 Change System.out to logger and Replace this usage of 'Stream.collect(Collectors.toList())' https://gitlab.gras-it.de/hsrt/swt2/-/issues/1566