@@ -2,7 +2,8 @@ package de.bogenliga.application.services.v1.liga.service;
 
 import java.security.Principal;
 import java.util.List;
-import java.util.stream.Collectors;
+import org.apache.logging.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
@@ -36,6 +37,8 @@ public class LigaService implements ServiceFacade {
 
     private final LigaComponent ligaComponent;
 
+    private static Logger logger = LogManager.getLogger(LigaService.class);
+
 
     /**
      * Constructor with dependency injection
@@ -58,14 +61,14 @@ public class LigaService implements ServiceFacade {
     @RequiresPermission(UserPermission.CAN_READ_DEFAULT)
     public List<LigaDTO> findAll() {
         final List<LigaDO> ligaDOList = ligaComponent.findAll();
-        return ligaDOList.stream().map(LigaDTOMapper.toDTO).collect(Collectors.toList());
+        return ligaDOList.stream().map(LigaDTOMapper.toDTO).toList();
     }
 
     @GetMapping(value = "/search/{searchstring}", produces = MediaType.APPLICATION_JSON_VALUE)
     @RequiresPermission(UserPermission.CAN_READ_DEFAULT)
     public List<LigaDTO> findBySearch(@PathVariable("searchstring") final String searchTerm) {
         final List<LigaDO> ligaDOList = ligaComponent.findBySearch(searchTerm);
-        return ligaDOList.stream().map(LigaDTOMapper.toDTO).collect(Collectors.toList());
+        return ligaDOList.stream().map(LigaDTOMapper.toDTO).toList();
     }
 
 
@@ -165,7 +168,7 @@ public class LigaService implements ServiceFacade {
                           final Principal principal) {
 
 
-        System.out.println("es kommt etwas an");
+        logger.info("Es kommt etwas an");
         final LigaDO newLigaDO = LigaDTOMapper.toDO.apply(ligaDTO);
         final long currentDsbMitglied = UserProvider.getCurrentUserId(principal);
 
